@@ -21,5 +21,32 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>org.mobicents.arquillian.container</groupId>
+			<artifactId>mss-arquillian-mediaserver-extension</artifactId>
+			<version>1.0.0-ALPHA2-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<forkMode>once</forkMode>
+					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
+					<includes>
+						<include>**/Testsuite.java</include>
+					</includes>
+					<excludes>
+						<exclude>**/MediaTest.java</exclude>
+						<exclude>**/OutgoingCallTest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
